@@ -1,12 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         MP3-Podcast
-version:      0.06
-version_from: lib/MP3/Podcast.pm
-installdirs:  site
+--- #YAML:1.0
+name:               MP3-Podcast
+version:            0.06_1
+abstract:           Perl extension for podcasting directories full of MP3 files
+author:
+    - Juan Julian Merelo Guervos <jmerelo@geneura.ugr.es>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    MP3::Info:                     1.13
-    XML::RSS:                      1.05
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    MP3::Info:  1.13
+    URI:        0
+    XML::RSS:   1.05
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
